setup/kubernetes/rcoder-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: ns-open-rcode
spec:
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: app-open-rcode-mongo-pv-claim
      containers:
      - name: mongo
        volumeMounts:
        - name: storage
          mountPath: "/data/db"
        image: mongo:7
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: ns-open-rcode
spec:
  ports:
    - port: 27017
      name: "default"
      protocol: TCP
  selector:
    app: mongo
